fix tooltip bindings and input spacing

--- a/src/app/data-tab/data-tab.scss
+++ b/src/app/data-tab/data-tab.scss
@@ -6,7 +6,7 @@
       margin-top: 5px;
 
       label {
-        width: 175px;
+        width: 225px;
       }
     
       input, textarea, select {
